# es-cli

./: .gitignore  .merlin  CHANGELOG.md  README.md  _oasis  dune-project  elasticsearch-cli.opam  myocamlbuild_config.ml  version.ml
src/: common.ml  config.atd  dune  elastic.atd  es.ml  gen_version.ml  plugin.atd  util.atd  wrap.ml
