opam-version: "1.2"
version: "0.4"
maintainer: "Raman Varabets <roman.vorobets@gmail.com>"
authors: ["Raman Varabets <roman.vorobets@gmail.com>"]
homepage: "https://github.com/cyborgize/es-cli"
dev-repo: "git+https://github.com/cyborgize/es-cli.git"
bug-reports: "https://github.com/cyborgize/es-cli/issues"
build: [
  ["./configure" "--prefix" "%{prefix}%"]
  [make]
]
install: [
  [make "install"]
]
remove: [
  [make "uninstall"]
]
depends: [
  "ocaml" {>= "4.01.0"}
  "ocamlfind" {build}
  "oasis" {build}
  "ocamlbuild" {build}
  "mybuild" {build}
  "devkit" {> "0.7"}
  "extlib" {>= "1.7.1"}
  "lwt" {>= "3.2.0"}
  "lwt_ppx"
  "re2" {>= "v0.9.0" & < "v0.12"}
  "atdgen"
]
