opam-version: "2.0"
version: "0.5"
maintainer: "Raman Varabets <roman.vorobets@gmail.com>"
authors: ["Raman Varabets <roman.vorobets@gmail.com>"]
homepage: "https://github.com/cyborgize/es-cli"
dev-repo: "git+https://github.com/cyborgize/es-cli.git"
bug-reports: "https://github.com/cyborgize/es-cli/issues"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {build & >= "4.01.0"}
  "dune" {build & >= "1.5"}
  "mybuild" {build}
  "atdgen" {>= "1.6.0"}
  "cmdliner"
  "devkit" {>= "1.0"}
  "extlib" {>= "1.7.1"}
  "lwt" {>= "3.2.0"}
  "lwt_ppx"
  "re2" {>= "v0.9.0" & < "v0.13"}
]
